<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="61dp"
        android:layout_height="69dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/content_desc_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/content_desc_logintxt2"
        android:text="@string/content_desc_login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />


    <TextView
        android:id="@+id/signUp_text"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:contentDescription="@string/content_desc_logintxt2"
        android:text="@string/sign_up"
        android:textColor="#03DA84"
        android:textColorHint="@color/teal_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:text="@string/donthave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_login"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="E-mail"
        android:background="@drawable/custom_shape"
        android:hint="@string/e_mail"
        android:includeFontPadding="true"
        android:inputType="text"
        android:paddingStart="15dp"
        android:drawablePadding="10sp"
        android:drawableStart="@drawable/customer_mail_icon"
        android:drawableLeft="@drawable/customer_mail_icon"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="250dp"
        android:text="@string/txt2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="250dp"
        android:text="@string/txt3"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="12dp"
        android:autofillHints="     Password"
        android:background="@drawable/custom_shape"
        android:drawablePadding="10sp"
        android:hint="@string/hint2"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawableLeft="@drawable/custom_password_icon"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_email"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/SignInBtn"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:padding="0dp"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_Password" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="91dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />

    <TextView
        android:id="@+id/forgot_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Forgot Password?"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_password" />


</androidx.constraintlayout.widget.ConstraintLayout>