<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="61dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_desc_logo"
        app:layout_constraintBottom_toTopOf="@+id/txt_CreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/txt_CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_desc_logintxt2"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />


    <TextView
        android:id="@+id/CA_fName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Full Name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CA_in_fullName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_CreateAccount"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/CA_in_fullName"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/custom_shape"
        android:hint="Enter full name"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="text"
        android:labelFor="@+id/firstname"
        android:paddingStart="17dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_CreateAccount"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/CA_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="E-mail"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CA_in_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_fullName"
        app:layout_constraintVertical_bias="0.164"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/CA_in_email"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_shape"
        android:hint="Enter e-mail address"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="text"
        android:labelFor="@+id/firstname"
        android:paddingStart="17dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_fullName" />

    <TextView
        android:id="@+id/CA_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="Phone Number"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CA_in_Phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_email"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/CA_in_Phone"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_shape"
        android:hint="Enter phone number"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="text"
        android:labelFor="@+id/firstname"
        android:paddingStart="17dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_email"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/CA_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="Password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CA_in_Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_Phone"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/CA_in_Password"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_shape"
        android:hint="Enter password"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="text"
        android:labelFor="@+id/firstname"
        android:paddingStart="17dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_Phone"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/CA_rePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="Re - Password"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CA_in_rePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_Password"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/CA_in_rePassword"
        android:layout_width="348dp"
        android:layout_height="46dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_shape"
        android:hint="Re enter password"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="text"
        android:labelFor="@+id/firstname"
        android:paddingStart="17dp"
        android:textColor="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_Password"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/create_Btn"
        android:layout_width="113dp"
        android:layout_height="39dp"


        android:background="@drawable/button"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_HaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_rePassword"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_HaveanAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="24dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/signIN_text"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:contentDescription="@string/content_desc_logintxt2"
        android:text="@string/sign_in2"
        android:textColor="#03DA84"
        android:textColorHint="@color/teal_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_HaveanAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/txt_HaveanAccount"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/txt_HaveanAccount"
        app:layout_constraintEnd_toStartOf="@+id/create_Btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CA_in_rePassword" />


</androidx.constraintlayout.widget.ConstraintLayout>